--- a/URLSession/Base.lproj/Main.storyboard
+++ b/URLSession/Base.lproj/Main.storyboard
@@ -1,24 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="URLSession" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="NV0-OL-Jb6">
+                                <rect key="frame" x="20" y="359.66666666666669" width="114" height="132.66666666666669"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YK9-y7-cfo">
+                                        <rect key="frame" x="0.0" y="0.0" width="114" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Get Simple"/>
+                                        <connections>
+                                            <action selector="getSimpleBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5QS-KN-deA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GZ-z9-zas">
+                                        <rect key="frame" x="0.0" y="98.333333333333314" width="114" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Post Simple"/>
+                                        <connections>
+                                            <action selector="postSimpleBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e09-ws-Gej"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="6GZ-z9-zas" secondAttribute="trailing" id="1gC-gQ-5eN"/>
+                                    <constraint firstItem="6GZ-z9-zas" firstAttribute="leading" secondItem="NV0-OL-Jb6" secondAttribute="leading" id="A4T-Df-3RZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="6GZ-z9-zas" secondAttribute="bottom" id="JY6-Kr-1dz"/>
+                                    <constraint firstAttribute="trailing" secondItem="YK9-y7-cfo" secondAttribute="trailing" id="Ylz-4q-Efc"/>
+                                    <constraint firstItem="YK9-y7-cfo" firstAttribute="top" secondItem="NV0-OL-Jb6" secondAttribute="top" id="g5C-gW-hYG"/>
+                                    <constraint firstItem="YK9-y7-cfo" firstAttribute="leading" secondItem="NV0-OL-Jb6" secondAttribute="leading" id="hYC-7A-ety"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="78" translatesAutoresizingMaskIntoConstraints="NO" id="gHb-wI-ZoK">
+                                <rect key="frame" x="235" y="352.66666666666669" width="138" height="146.66666666666669"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAX-2T-0mv">
+                                        <rect key="frame" x="0.0" y="0.0" width="138" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Get Multi-part"/>
+                                        <connections>
+                                            <action selector="getMultiPartBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vhY-0r-noO"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fR4-yP-IrC">
+                                        <rect key="frame" x="0.0" y="112.3333333333333" width="138" height="34.333333333333329"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Post Multi-part"/>
+                                        <connections>
+                                            <action selector="postMultiPartBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AFm-Do-BfR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="VAX-2T-0mv" secondAttribute="trailing" id="4YY-kK-x0I"/>
+                                    <constraint firstItem="VAX-2T-0mv" firstAttribute="leading" secondItem="gHb-wI-ZoK" secondAttribute="leading" id="Gzx-ad-c5K"/>
+                                    <constraint firstAttribute="bottom" secondItem="fR4-yP-IrC" secondAttribute="bottom" id="dpJ-02-OG0"/>
+                                    <constraint firstItem="fR4-yP-IrC" firstAttribute="leading" secondItem="gHb-wI-ZoK" secondAttribute="leading" id="dzV-QE-9J2"/>
+                                    <constraint firstItem="VAX-2T-0mv" firstAttribute="top" secondItem="gHb-wI-ZoK" secondAttribute="top" id="ezl-94-vw8"/>
+                                    <constraint firstAttribute="trailing" secondItem="fR4-yP-IrC" secondAttribute="trailing" id="fat-Dt-j45"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gHb-wI-ZoK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="P9T-uZ-Hft"/>
+                            <constraint firstItem="NV0-OL-Jb6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QPa-HF-U5o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gHb-wI-ZoK" secondAttribute="trailing" constant="20" id="o8w-PM-5oA"/>
+                            <constraint firstItem="NV0-OL-Jb6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="q0n-ha-XeU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-119.84732824427481" y="-0.70422535211267612"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
